created nav bar for layout and home page

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -10,6 +10,11 @@ Happy to see that you are still commited to being HEAL-THY!
 
 <form class="" action="/login" method="post"> 
 
+
+<label for="name">My name is </label>
+<input type="text"  name="name"   value="">
+<br>
+
 <label for="email">Please Enter Your Email:</label>
 <input type="text"  name="email"   value="">
 <br>
