--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,20 @@
   <body>
     <div class="wrapper">
 
+    <div class="sidebar">
+    <h4>Heal-Thy:Stay Connected</h4>
+    <ul>
+      <l1> <a href="/"> Home </a></li>
+      <br>
+      <l1> <a href="/login"> Log-In: </a></li>
+      <br>
+      <l1> <a href="/logout"> Log-Out: </a></li>
+      <br>
+      <l1> <a href="/signup"> Sign-Up: </a></li>
+    </ul>
+  </div>
+
+
         <%= yield %>
 
       <footer class="branding">
