--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,14 @@
 
     <title>HealThy</title>
 
+    <nav>
+   
+    <l1> <a href="/login">| Log-In | </a></li>
+    <l1> <a href="/logout"> | Log-Out |</a></li>
+    
+    <l1> <a href="/signup"> | Sign-Up |</a></li>
+   </nav>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
@@ -21,11 +29,9 @@
     <ul>
       <l1> <a href="/"> Home </a></li>
       <br>
-      <l1> <a href="/login"> Log-In: </a></li>
+      <l1> <a href="/weights/show"> My Weight Log </a></li>
       <br>
-      <l1> <a href="/logout"> Log-Out: </a></li>
-      <br>
-      <l1> <a href="/signup"> Sign-Up: </a></li>
+    
     </ul>
   </div>
 
