created new weights route

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,7 +31,7 @@
       <br>
       <l1> <a href="/weights/show"> My Weight Log </a></li>
       <br>
-    
+      <l1> <a href="/weights/new">  Post New Weight  </a></li>
     </ul>
   </div>
 
