Created Stat Table, Deleted Weights

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -29,9 +29,9 @@
     <ul>
       <l1> <a href="/"> Home </a></li>
       <br>
-      <l1> <a href="/weights/show"> My Weight Log </a></li>
+      <l1> <a href="/users/show"> My Weight Log </a></li>
       <br>
-      <l1> <a href="/weights/new">  Post New Weight  </a></li>
+      <l1> <a href="/stats/new">  Post New Weight  </a></li>
     </ul>
   </div>
 
