--- a/app/views/stats/edit.erb
+++ b/app/views/stats/edit.erb
@@ -1,4 +1,4 @@
-<h1> Post New Weight </h1>
+<h1> Edit Weight </h1>
 
 <form action="/weights"  method="post"> 
 <label for="weight"> My Current Weight</label>
@@ -10,3 +10,11 @@
 <br>
 <input type="submit" name="" value="Submit"?
 </form>
+
+
+Edit your Weight!
+<a href="/weights/id/<% @weight.id %/edit"> Edit Weight </a>
+
+Delete your Weight!
+<a href="/weights/id/delete"> Delete Weight </a>
+
