--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,13 @@
 
-<h2>Hello <%= @user.name %></h2> 
+
 <h1>Here is Your Weight Log </h1>
 
+<h1><%= @user.name %></h1>
 
+
+
+<p><%= @user.weight %></p>
+
+<p><%= @stat %></p>
 
 
